# ctf-challenge-app

./: .env  .gitignore  .pre-commit-config.yaml  docker-compose.yml
ctf-server/: function_app.py  pyproject.toml  requirements.txt
ctf-server/ctf-function-api/: function_app.py
ctf-server/ctf_server/: config.py  main.py
ctf-server/ctf_server/api/: challange_app.py  challenge_app.py  flag_routes.py
ctf-server/ctf_server/core/: crypto.py  flag_validator.py  flag_validator_strategy.py
ctf-server/ctf_server/db/: azure_proxy.py  mongodb_proxy.py  storage_service.py
ctf-server/ctf_server/db/dto/: flag_dto.py
ctf-server/ctf_server/model/: flag.py  state.py
ctf-server/ctf_server/service/: flag_service.py
ctf-server/tests/: test_flag_validator.py
ctf-server/tests/functional/: conftest.py
ctf-server/tests/integration/: conftest.py
ctf-server/tests/integration/core/: test_flag_validator.py
ctf-server/tests/integration/service/: test_flag_create.py  test_flag_get.py  test_flag_remove.py  test_flag_service.py  test_flag_update.py
ctf-server/tests/unit/core/: test_crypto.py  test_flag_validator.py  test_flag_validator_strategy.py
